<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentSettingsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/home_background"
    tools:context=".Fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/testButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_8"
        android:layout_marginBottom="8dp"
        android:text="Button"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogout" />

    <ImageView
        android:id="@+id/ivAddedProfilePic"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="@drawable/grey_circle"
        android:padding="10dp"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_8"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNameSurname"
        fancy:fb_defaultColor="#137096"
        fancy:fb_disabledColor="#5e5e5e"
        fancy:fb_disabledTextColor="#cfcfcf"
        fancy:fb_focusColor="#051820"
        fancy:fb_fontIconResource="&#xf00c;"
        fancy:fb_fontIconSize="20dp"
        fancy:fb_iconPaddingRight="5dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="50dp"
        fancy:fb_text="@string/save"
        fancy:fb_textColor="#FFFFFF" />

    <ImageView
        android:id="@+id/ivProfilePic"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        app:layout_constraintBottom_toBottomOf="@+id/ivAddedProfilePic"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/ivAddedProfilePic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivAddedProfilePic"
        tools:src="@tools:sample/avatars" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etNameSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:ems="10"
        android:hint="@string/nameSurname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:met_errorColor="#ff2d22"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="40" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginEnd="@dimen/margin_8"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivAddedProfilePic"
        app:met_errorColor="#ff2d22"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="30"
        app:met_minCharacters="1" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btLogout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_8"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btDetectLocation"
        fancy:fb_defaultColor="#dc1600"
        fancy:fb_disabledColor="#5e5e5e"
        fancy:fb_disabledTextColor="#cfcfcf"
        fancy:fb_focusColor="#ffffff"
        fancy:fb_fontIconResource="&#xf235;"
        fancy:fb_fontIconSize="20dp"
        fancy:fb_iconPaddingRight="5dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="50dp"
        fancy:fb_text="@string/logout"
        fancy:fb_textColor="#FFFFFF" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btDetectLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8"
        android:layout_marginTop="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_8"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSave"
        fancy:fb_defaultColor="#137096"
        fancy:fb_disabledColor="#5e5e5e"
        fancy:fb_disabledTextColor="#cfcfcf"
        fancy:fb_focusColor="#051820"
        fancy:fb_fontIconResource="&#xf041;"
        fancy:fb_fontIconSize="20dp"
        fancy:fb_iconPaddingRight="5dp"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="50dp"
        fancy:fb_text="@string/detect_location"
        fancy:fb_textColor="#FFFFFF" />

</android.support.constraint.ConstraintLayout>