<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/FragmentSettingsConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".Fragments.SettingsFragment"
    android:animateLayoutChanges="false"
    android:clickable="true">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/FragmentSettingsScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/FragmentSettingsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/FragmentSettingsChildConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivProfilePic"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/avatars" />

                <ImageView
                    android:id="@+id/ivAddedProfilePic"
                    android:layout_width="0dp"
                    android:layout_height="70dp"
                    android:background="@drawable/grey_circle"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/ivProfilePic"
                    app:layout_constraintDimensionRatio="w,1:1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
                    app:layout_constraintTop_toTopOf="@+id/ivProfilePic"
                    tools:src="@tools:sample/avatars" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etUsername"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="textPersonName"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivProfilePic"
                    app:met_errorColor="#ff2d22"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="30"
                    app:met_minCharacters="5" />

                <com.rengwuxian.materialedittext.MaterialEditText
                    android:id="@+id/etNameSurname"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:ems="10"
                    android:hint="@string/nameSurname"
                    android:inputType="textPersonName|text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/etUsername"
                    app:met_errorColor="#ff2d22"
                    app:met_floatingLabel="highlight"
                    app:met_maxCharacters="40" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNameSurname"
                    fancy:fb_defaultColor="#137096"
                    fancy:fb_disabledColor="#5e5e5e"
                    fancy:fb_disabledTextColor="#cfcfcf"
                    fancy:fb_focusColor="#051820"
                    fancy:fb_fontIconResource="&#xf00c;"
                    fancy:fb_fontIconSize="20dp"
                    fancy:fb_iconPaddingRight="5dp"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="50dp"
                    fancy:fb_text="@string/save"
                    fancy:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btVerificateDialog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btDetectLocation"
                    fancy:fb_defaultColor="#00b8ac"
                    fancy:fb_disabledColor="#5e5e5e"
                    fancy:fb_disabledTextColor="#cfcfcf"
                    fancy:fb_focusColor="#00635c"
                    fancy:fb_fontIconResource="&#xf0e0;"
                    fancy:fb_fontIconSize="20dp"
                    fancy:fb_iconPaddingRight="5dp"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="50dp"
                    fancy:fb_text="@string/verificateEmail"
                    fancy:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btSuggestion"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btVerificateDialog"
                    fancy:fb_defaultColor="#137096"
                    fancy:fb_disabledColor="#5e5e5e"
                    fancy:fb_disabledTextColor="#cfcfcf"
                    fancy:fb_focusColor="#051820"
                    fancy:fb_fontIconResource="&#xf0e0;"
                    fancy:fb_fontIconSize="20dp"
                    fancy:fb_iconPaddingRight="5dp"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="50dp"
                    fancy:fb_text="@string/suggestion_dialog_title"
                    fancy:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btReviewApp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btSuggestion"
                    fancy:fb_defaultColor="#4CAF50"
                    fancy:fb_disabledColor="#5e5e5e"
                    fancy:fb_disabledTextColor="#cfcfcf"
                    fancy:fb_focusColor="#00635c"
                    fancy:fb_fontIconResource="&#xf004;"
                    fancy:fb_fontIconSize="20dp"
                    fancy:fb_iconPaddingRight="5dp"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="50dp"
                    fancy:fb_text="@string/rate_app"
                    fancy:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btLogout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btReviewApp"
                    fancy:fb_defaultColor="#dc1600"
                    fancy:fb_disabledColor="#5e5e5e"
                    fancy:fb_disabledTextColor="#cfcfcf"
                    fancy:fb_focusColor="#ffffff"
                    fancy:fb_fontIconResource="&#xf235;"
                    fancy:fb_fontIconSize="20dp"
                    fancy:fb_iconPaddingRight="5dp"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="50dp"
                    fancy:fb_text="@string/logout"
                    fancy:fb_textColor="#FFFFFF" />

                <mehdi.sakout.fancybuttons.FancyButton
                    android:id="@+id/btDetectLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:layout_marginTop="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_8"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btSave"
                    fancy:fb_defaultColor="#137096"
                    fancy:fb_disabledColor="#5e5e5e"
                    fancy:fb_disabledTextColor="#cfcfcf"
                    fancy:fb_focusColor="#051820"
                    fancy:fb_fontIconResource="&#xf041;"
                    fancy:fb_fontIconSize="20dp"
                    fancy:fb_iconPaddingRight="5dp"
                    fancy:fb_iconPosition="left"
                    fancy:fb_radius="50dp"
                    fancy:fb_text="@string/detect_location"
                    fancy:fb_textColor="#FFFFFF" />

                <TextView
                    android:id="@+id/btOpenSource"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/open_source_libraries"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btLogout" />
            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>